--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -1,17 +1,19 @@
 /* src/components/Carousel.css */
 
 .carousel {
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    position: relative;
-  }
-  
-  .carousel img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Asegura que la imagen se ajuste a la pantalla */
-    transform-origin: center;
-    transition: transform var(--zoom-duration, 60s) linear; /* Usar una variable CSS para la duración */
-  }
-  
+  position: fixed; /* Cambiar de absolute a fixed */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh; /* Asegura que cubre toda la vista */
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  z-index: -1; /* Asegura que el carrusel esté detrás del contenido */
+}
+
+.carousel img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Cubre todo el contenedor sin distorsionarse */
+}
