--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -1,14 +1,45 @@
-/* src/components/AboutUs.css */
-div {
-    padding: 2rem;
-    text-align: center;
-  }
-  
-  h1 {
-    color: #333;
-  }
-  
-  p {
-    color: #555;
-  }
-  
+/* src/components/AboutUs/AboutUs.css */
+
+.about-us {
+  position: relative;
+  width: 100%;
+  height: 100vh; /* Altura completa de la vista */
+  overflow: hidden;
+}
+
+.about-us .carousel {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Asegura que el carrusel esté detrás del contenido */
+}
+
+.about-us-content {
+  position: absolute;
+  top: calc(100px + 15vh); /* Ajusta esta distancia según la altura del Navbar */
+  left: 50%;
+  transform: translate(-50%, -10vh); /* Ajusta para centrar verticalmente */
+  background-color: rgba(255, 255, 255, 0.911);
+  padding: 2rem;
+  border-radius: 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  width: 60%; /* Ajusta el ancho del cuadro */
+  height: calc(78vh - 30px); /* Ajusta la altura del cuadro, reduciendo un 20% */
+  text-align: center;
+  overflow-y: auto; /* Permite el desplazamiento si el contenido es demasiado grande */
+}
+
+.about-us-content h1 {
+  margin-bottom: 1rem;
+}
+
+.about-us-content p {
+  margin-bottom: 1rem;
+  line-height: 1.5;
+}
+
+
+
+
