--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,42 +1,42 @@
-/* src/components/auth/Login.css */
-div {
-    padding: 2rem;
-    text-align: center;
-  }
-  
-  h1 {
-    color: #333;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    max-width: 300px;
-    margin: 0 auto;
-  }
-  
-  input {
-    padding: 0.5rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  button {
-    padding: 0.5rem;
-    border: none;
-    border-radius: 4px;
-    background-color: #333;
-    color: white;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #555;
-  }
-  
-  p {
-    color: red;
-  }
+/* src/components/AboutUs/AboutUs.css */
 
+.login {
+  position: relative;
+  width: 100%;
+  height: 100vh; /* Altura completa de la vista */
+  overflow: hidden;
+}
+
+.login.carousel {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Asegura que el carrusel esté detrás del contenido */
+}
+
+.login-content {
+  position: absolute;
+  top: calc(100px + 15vh); /* Ajusta esta distancia según la altura del Navbar */
+  left: 50%;
+  transform: translate(-50%, -10vh); /* Ajusta para centrar verticalmente */
+  background-color: rgba(255, 255, 255, 0.911);
+  padding: 2rem;
+  border-radius: 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  width: 60%; /* Ajusta el ancho del cuadro */
+  height: calc(78vh - 30px); /* Ajusta la altura del cuadro, reduciendo un 20% */
+  text-align: center;
+  overflow-y: auto; /* Permite el desplazamiento si el contenido es demasiado grande */
+}
+
+.login-content h1 {
+  margin-bottom: 1rem;
+}
+
+.login-content p {
+  margin-bottom: 1rem;
+  line-height: 1.5;
+}
   
