--- a/src/components/Localizanos/Localizanos.css
+++ b/src/components/Localizanos/Localizanos.css
@@ -1,22 +1,26 @@
-/* src/components/Nosotros/Nosotros.css */
+/* src/components/AboutUs/AboutUs.css */
 
-.nosotros {
+.localizanos {
   position: relative;
   width: 100%;
   height: 100vh; /* Altura completa de la vista */
   overflow: hidden;
+  margin: 0; /* Eliminar márgenes */
+  padding: 0; /* Eliminar rellenos */
 }
 
-.nosotros .carousel {
+.localizanos::before {
+  content: "";
+  background: url('../assets/malagadenoche.jpg') no-repeat center center/cover; /* Ajustar ruta de la imagen si es necesario */
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1; /* Asegura que el carrusel esté detrás del contenido */
+  z-index: -1; /* Asegura que el fondo esté detrás del contenido */
 }
 
-.nosotros-content {
+.localizanos-content {
   position: absolute;
   top: calc(100px + 15vh); /* Ajusta esta distancia según la altura del Navbar */
   left: 50%;
@@ -31,11 +35,13 @@
   overflow-y: auto; /* Permite el desplazamiento si el contenido es demasiado grande */
 }
 
-.nosotros-content h1 {
+.about-us-content h1 {
   margin-bottom: 1rem;
 }
 
-.nosotros-content p {
+.about-us-content p {
   margin-bottom: 1rem;
   line-height: 1.5;
 }
+
+
